# http-test

./: .env  .gitignore  Cargo.toml  request.json
reqwest-test/: Cargo.toml
reqwest-test/src/: client.rs  main.rs
reqwest-test/src/factory/: mod.rs  php.rs
src/: client.rs  main.rs
src/factory/: instance.rs  mod.rs  module.rs  php.rs  request.rs
