[package]
name = "reqwest-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0.11.11"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.44"
serde_with = "2.0.0"
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
async-trait = "0.1.57"